--- a/Desafios/Desafio005/estilos/style.css
+++ b/Desafios/Desafio005/estilos/style.css
@@ -1,22 +1,33 @@
 @charset "Utf-8";
 
 body {
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(25, 155, 198);
+    font: normal 15pt arial;
 }
 header {
-    color: white;
+    color: White;
     text-align: center;
 }
-main {
-    text-align: left;
-    font-size: 1.2em;
+section {
     background-color: white;
-    margin-left: 25vw;
-    width: 50%;
-    height: 35vh;
-    border-radius: 40px;
-    padding: 20px;
+    border-radius: 10px;
+    padding: 15px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
+}
+div {
+    text-align: center;
+    padding: 10px;
 }
 img {
-    width: 300px;
+    width: 340px;
+    height: 320px;
+    border-radius: 1000px;
 }
+footer {
+    text-align: center;
+    font-style: italic;
+    color: white;
+}
+
